fixing locations and amenities not showing inside search tab

--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -25,4 +25,5 @@
 .locations, .amenities {
     height: 100%;
     width: 25%;
+    display: inline-block;
 }
